[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/User Interface/boxAtribut.png" type="Texture" id=1]
[ext_resource path="res://Assets/User Interface/AtributBox2.png" type="Texture" id=2]
[ext_resource path="res://Assets/User Interface/AtributBox1.png" type="Texture" id=3]
[ext_resource path="res://Menus/ItemStat.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/Jupiter-Pro.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 3
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 5 )

[node name="BoxStat" type="Control"]
margin_left = 148.0
margin_top = 58.0
margin_right = 148.0
margin_bottom = 58.0
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="StatBackground" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="StatForeground" type="Sprite" parent="."]
position = Vector2( -121, -14 )
scale = Vector2( 0.25, 1 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_group_": true
}

[node name="StatType" type="Label" parent="."]
margin_left = -121.0
margin_top = -34.0
margin_right = -81.0
margin_bottom = -20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Tittle"

[node name="StatValue" type="Label" parent="."]
margin_left = -116.0
margin_top = -6.0
margin_right = -76.0
margin_bottom = 8.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "50"
